# autoframe

./: .gitignore  README.md  pyproject.toml
.chainlit/: config.toml
.devcontainer/: devcontainer.json
autoframe/express/: agent.py  agents.py  app.py  chainlit.py  config.py
autoframe/express/tools/: ask_assistant.py  ask_programmer.py  search.py
autoframe/notes/: assistant.ipynb  playwright.ipynb
autoframe/notes/autogen/: agent.py  assistant.py  gpts.py  math.py  vision.py
autoframe/senarios/: agile.py  six_thinking_hats.py
autoframe/senarios/agile/: README.md
autoframe/senarios/basic/: action.md  action.py  agent.py  assistant.py  chainlit.py  gpts.py  groupchat.py
autoframe/senarios/express/: main.py
autoframe/senarios/lean_ux/: design.py
tests/: test_calc.py
